--- a/gadget/styles/gadget.css
+++ b/gadget/styles/gadget.css
@@ -37,11 +37,26 @@ a.refresh {
 	display: block;
 	width: 15px;
 	height: 15px;
-	background: url(images/refresh.png) no-repeat center center;
+	background-image: url(images/refresh.png);
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 
 a.refresh:hover {
-	background: url(images/refresh_over.png) no-repeat center center;
+	background-image: url(images/refresh_over.png);
+}
+
+a.refresh.processing,
+a.refresh.processing:hover {
+	background-image: url(images/load_circle.gif);
+}
+
+a.refresh.error {
+	background-image: url(images/refresh_error.png);
+}
+
+a.refresh.error:hover {
+	background-image: url(images/refresh_error_over.png);
 }
 
 .bars-container {
