Update check finished but not in use. Hide offpeak bar when not in use. Refactoring.

--- a/gadget/styles/gadget.css
+++ b/gadget/styles/gadget.css
@@ -70,6 +70,10 @@ a.refresh.error:hover {
 	position: relative;
 }
 
+.bar.bar-shift {
+	margin-top: 17px;
+}
+
 .bar:hover {
 	border: solid 1px white;
 	cursor: pointer;	
