--- a/trunk/gadget/styles/settings.css
+++ b/trunk/gadget/styles/settings.css
@@ -8,29 +8,103 @@ body {
 	width: 200px;
 }
 
-table {
-	width: 100%;
-	font-size: 1.2em;
+a, a:visited {
+	color: #1C94C4;
+	text-decoration: none;
 }
 
-table label {
+a:hover {
+	color: #6FB1FF;	
+}
+
+table {
+	width: 100%;
+	font-size: .9em;
+}
+
+table td {
+	padding-top: 5px;	
+}
+
+table label.invalid {
+	color: #AF0000;
+	font-weight: bold;
 }
 
 table input {
+	width: 99%;
+	font-size: 1.5em;
+}
+
+table input.chk {
+	width: auto;
+}
+
+button {
 	width: 100%;
-	font-size: 1.2em;
+	background: white;
+	color: #1C94C4;
+	border: 1px solid #8F8F8F;
+	border-bottom-width: 3px;
+	border-top-color: #BFBFBF;
+	font-weight: bold;
+	padding: 2px 0;
+	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
 }
 
-#btnCheck {
-	width: 100%;	
+button:hover {
+	border-color: Black;
 }
 
-#btnCheck.processing {
+button.processing {
 	background: url(images/load_blank.gif) no-repeat 3px center;
 }
 
 #msg {
-	height: 40px;
-	color: #990000;
-	text-align: center;	
+	width: 150px;
+	position: absolute;
+	top: 115px;
+	left: 10px;
+	background: #47758F;
+	border: solid 2px black;
+	padding: 15px;
+	color: white;
+	text-align: center;
+}
+
+#msg div {
+	font-size: 1.2em;
+}
+
+#msg a.close {
+	position: absolute; 
+	right: 4px; 
+	top: 0px;
+	color: White;
+}
+
+#msg.processing {
+	background-image: url(images/load_circle_blue.gif);
+	background-repeat: no-repeat;
+	background-position: 5px 5px;
+}
+
+#msg.processing div {
+	padding-left: 5px;	
+}
+
+#msg a {
+	color: #6FB1FF;
+}
+
+#msg a:hover {
+	color: white;
+}
+
+#msg button {
+	border-color: Black;
+}
+
+#msg button:hover {
+	background-color: #EFEFEF;
 }
